Fix formatting of overflowing lists

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,12 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+.sortable-ghost {
+  @apply bg-gray-300 opacity-50;
 }
 
-*/
+.list {
+  /* Internet Explorer 10+ */
+  -ms-overflow-style: none;
+  /* Firefox */
+  scrollbar-width: none;
+}
+
+.list::-webkit-scrollbar {
+  /* Safari and Chrome */
+  display: none;
+}
